--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_API=1111111111:AAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBB
+BOT_API=1111111111:5092676724:AAGKKruSPwhzKy5VtN0Jp11iwHk-tU7F8do
 URL=https://deneyselbot.herokuapp.com/
 PORT=80
